# programiranje-1

./: .buildinfo  .gitignore  .ocamlformat  00-uvod.html  01-uvod-v-funkcijsko-programiranje.html  02-rekurzija.html  02-uvod-v-funkcijsko-programiranje.html  03-podatkovni-tipi.html  03-rekurzija.html  04-abstrakcija.html  04-podatkovni-tipi.html  05-abstrakcija.html  05-curry-howardov-izomorfizem.html  06-uvod-v-lean.html  07-odvisni-tipi.html  08-induktivni-tipi.html  09-izracunljivost.html  10-racunska-zahtevnost.html  11-iskalna-drevesa.html  12-deli-in-vladaj.html  13-01-dinamicno-programiranje.html  13-02-memoizacija-v-pythonu.html  13-03-memoizacija-v-ocamlu.html  README.md  SOLUTIONS.md  dn-1.html  dn-1.ml  dn-2.html  dn-4.html  dn-5.html  genindex.html  index.html  objects.inv  prf-prf.html  primer.ml  search.html  searchindex.js  test
projekt/: .gitignore  .ocamlformat  Analiza filmskih žanrov.ipynb  Najboljši filmi.ipynb  Predavanja.ipynb  README.md  avtomat.ml  dune  dune-project  filmi.py  model.ml  orodja.py  spletniVmesnik.html  spletniVmesnik.ml  tekstovniVmesnik.ml  ustvari_csv.py  utils.py  view.ml
projekt/csv-datoteke/: dolocitve_zanra.csv  filmi.csv  igralci.csv  rotten.csv  vloge.csv  zanri.csv  zanri_korenov.csv
projekt/html/: spletniVmesnik.html
projekt/src/: avtomat.ml  dune  spletniVmesnik.ml  tekstovniVmesnik.ml
projekt/src/definicije/: avtomat.ml  avtomat.mli  definicije.ml  dune  stanje.ml  stanje.mli  trak.ml  trak.mli  zagnaniAvtomat.ml  zagnaniAvtomat.mli
projekt/src/logika/: dune
projekt/zajete-strani/: imdb.html  rotten.html
(+2163 files in other folders)
